forget password page with background image and meta tags

--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -4,6 +4,10 @@
 <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
+    <meta name="description" content="This page is used for reset the password">
+    <meta name="Keywords" content="">
+    <meta name="author" content="">
     <title> Forgot Password Form</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +32,8 @@
 
 <body class="bd">
 
-<hr>
+<br>
+<br>
 
 <div class="container">
     <div class="row">
@@ -68,7 +73,7 @@
 
 
 
-<hr>
+
 
 <!-- JavaScript jQuery code from Bootply.com editor  -->
 
