--- a/about.html
+++ b/about.html
@@ -1,10 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>about us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+
+        * {
+            box-sizing: border-box;
+        }
+
+        .row::after {
+            content: "";
+            clear: both;
+            display: block;
+        }
+
+        [class*="col-"] {
+            float: left;
+            padding: 15px;
+        }
+
+        html {
+            font-family: "Lucida Sans", sans-serif;
+        }
+
+        .header {
+            height:50px;
+            background-color: #009999;
+            color: #ffffff;
+            padding: 15px;
+            font-size:100%;
+            word-spacing:150px;
+        }
+
+        .menu ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu li {
+            padding: 8px;
+            margin-bottom: 7px;
+            background-color: #33b5e5;
+            color: #ffffff;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        }
+
+        .menu li:hover {
+            background-color: #0099cc;
+        }
+
+        .aside {
+            background-color: #009999;
+            padding: 15px;
+            color: #ffffff;
+            text-align: center;
+            font-size: 14px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        }
+
+        .footer {
+            background-color: #009999;
+            color: #ffffff;
+            text-align: center;
+            font-size: 12px;
+            padding: 15px;
+            height:100px;
+        }
+
+        /* For desktop: */
+        .col-1 {width: 8.33%;}
+        .col-2 {width: 16.66%;}
+        .col-3 {width: 25%;}
+        .col-4 {width: 33.33%;}
+        .col-5 {width: 41.66%;}
+        .col-6 {width: 50%;}
+        .col-7 {width: 58.33%;}
+        .col-8 {width: 66.66%;}
+        .col-9 {width: 75%;}
+        .col-10 {width: 83.33%;}
+        .col-11 {width: 91.66%;}
+        .col-12 {width: 100%;}
+
+        @media only screen and (max-width: 768px) {
+            /* For mobile phones: */
+            [class*="col-"] {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
+
+<div class="header">
+    <a href="#">Home</a>
+    <a href="about.html">AboutUs</a>
+        <a href="#">Contact</a>
+        <a href="#">Login</a>
+        <a href="register.html">Register</a>
+    <a href="forgetpassword.html">ForgetPassword</a>
+</div>
+
+<div class="row">
+    <div class="col-3 menu">
+        <ul>
+            <li>The Flight</li>
+            <li>The City</li
+            <li>The Island</li>
+            <li>The Food</li>
+        </ul>
+    </div>
+
+    <div class="col-6">
+        <h1>About Us</h1>
+        <p>Since Its opening, City Hospital.has been expanding Its services and equipment to meet the growing healthcare needs of the human community.<br>
+            Objectives of City Hospital are to provide a tertiary level patient care and serve as referral hospital also to conduct teaching/ training of doctors and other health workers at various level in the field of medicine and surgery.<br>
+            The establishment of the City Hospital, Multan heralds a bright new era for the citizens of South Punjab, especially the residents of the Multan.
+
+            Apart from providing medical facilities to the resident of Multan and surrounding areas, the City Hospital will function as a National Reference Centre for providing specialized diagnostic and curative services to the patients referred by other hospitals/institution</p>
+    </div>
+
+    <div class="col-3 right">
+        <div class="aside">
+            <i class="fa fa-facebook-f" style="font-size:48px;color:red"></i>
+            <a href="#">Facebook</a><br>
+            <i class="fa fa-edge" style="font-size:48px;color:red"></i>
+            <a href="#">Email</a>
+        </div>
+    </div>
+</div>
+
+<div class="footer">
+    <h><b>City Health Care Services (Pvt) Ltd.</b> <br>
+        Peer Khursheed Colony Road,<br>
+        Lahore.<br>
+        Phone: 042-6510 367<br>
+    www.cityhospital.com</h>
+</div>
 
 </body>
 </html>
