--- a/register.html
+++ b/register.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
     <meta name="description" content="This page is used for registration">
-    <meta name="Keywords" content="">
-    <meta name="author" content="">
+    <meta name="Keywords" content="booking,enrollment">
+     <meta name="author" content="ImanFatima">
     <title>Registration</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
 
@@ -13,7 +13,7 @@
     <!------ Include the above in your HEAD tag ---------->
 </head>
 <body>
-
+<div class="blur">
 
 
 <form class="form-horizontal" action='' method="POST">
@@ -66,6 +66,16 @@
         </div>
     </fieldset>
 </form>
+
+<!--<div class="seven">-->
+    <!--<h3><b>City Health Care Services (Pvt) Ltd.</b> <br>-->
+        <!--Peer Khursheed Colony Road,<br>-->
+        <!--Lahore.<br>-->
+        <!--Phone: 042-6510 367</h3><br>-->
+    <!--www.cityhospital.com-->
+<!--</div>-->
+<!--<div class="eight">-->
+<!--</div>-->
 
 
 
