--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
     <meta name="description" content="This page is used for reset the password">
-    <meta name="Keywords" content="">
-    <meta name="author" content="">
+    <meta name="Keywords" content="identification">
+    <meta name="author" content="ImanFatima">
     <title> Forgot Password Form</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -80,7 +80,15 @@
 
 
 
-
+<!--<div class="seven">-->
+    <!--<h3><b>City Health Care Services (Pvt) Ltd.</b> <br>-->
+        <!--Peer Khursheed Colony Road,<br>-->
+        <!--Lahore.<br>-->
+        <!--Phone: 042-6510 367</h3><br>-->
+    <!--www.cityhospital.com-->
+<!--</div>-->
+<!--<div class="eight">-->
+<!--</div>-->
 
 
 
