About us page...

--- a/about.html
+++ b/about.html
@@ -1,73 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-
-        * {
-            box-sizing: border-box;
-        }
-
-        .row::after {
-            content: "";
-            clear: both;
-            display: block;
-        }
-
-        [class*="col-"] {
-            float: left;
-            padding: 15px;
-        }
-
-        html {
-            font-family: "Lucida Sans", sans-serif;
-        }
-
-        .header {
-            height:50px;
-            background-color: #009999;
-            color: #ffffff;
-            padding: 15px;
-            font-size:100%;
-            word-spacing:150px;
-        }
-
-        .menu ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .menu li {
-            padding: 8px;
-            margin-bottom: 7px;
-            background-color: #33b5e5;
-            color: #ffffff;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        }
-
-        .menu li:hover {
-            background-color: #0099cc;
-        }
-
-        .aside {
-            background-color: #009999;
-            padding: 15px;
-            color: #ffffff;
-            text-align: center;
-            font-size: 14px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        }
-
-        .footer {
-            background-color: #009999;
-            color: #ffffff;
-            text-align: center;
-            font-size: 12px;
-            padding: 15px;
-            height:100px;
-        }
+    <meta name="description" content="This page gives you information about the hospital">
+    <meta name="Keywords" content="emergencyroom,institution,nursingroom">
+    <meta name="author" content="Soha Gull">
+    <link rel="stylesheet" href="aboutstyle.css">
+<style>
 
         /* For desktop: */
         .col-1 {width: 8.33%;}
@@ -91,10 +32,10 @@
         }
     </style>
 </head>
-<body>
+<div>
 
 <div class="header">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">AboutUs</a>
         <a href="#">Contact</a>
         <a href="#">Login</a>
@@ -102,23 +43,21 @@
     <a href="forgetpassword.html">ForgetPassword</a>
 </div>
 
-<div class="row">
+< class="row">
     <div class="col-3 menu">
-        <ul>
-            <li>The Flight</li>
-            <li>The City</li
-            <li>The Island</li>
-            <li>The Food</li>
-        </ul>
+        <img src="h1.jpg" width="100%" height="345">
     </div>
 
     <div class="col-6">
         <h1>About Us</h1>
         <p>Since Its opening, City Hospital.has been expanding Its services and equipment to meet the growing healthcare needs of the human community.<br>
             Objectives of City Hospital are to provide a tertiary level patient care and serve as referral hospital also to conduct teaching/ training of doctors and other health workers at various level in the field of medicine and surgery.<br>
-            The establishment of the City Hospital, Multan heralds a bright new era for the citizens of South Punjab, especially the residents of the Multan.
+            The establishment of the City Hospital, Lahore heralds a bright new era for the citizens of South Punjab, especially the residents of the Multan.
 
-            Apart from providing medical facilities to the resident of Multan and surrounding areas, the City Hospital will function as a National Reference Centre for providing specialized diagnostic and curative services to the patients referred by other hospitals/institution</p>
+            Apart from providing medical facilities to the resident of Lahore and surrounding areas, the City Hospital will function as a National Reference Centre for providing specialized diagnostic and curative services to the patients referred by other hospitals/institution</p>
+           <img src="st1.jpg" width="100%" height="345">
+           <img src="st2.jpg" width="100%" height="345">
+           <img src="st3.jpg" width="100%" height="345">
     </div>
 
     <div class="col-3 right">
@@ -130,6 +69,7 @@
         </div>
     </div>
 </div>
+
 
 <div class="footer">
     <h><b>City Health Care Services (Pvt) Ltd.</b> <br>
