--- a/index.html
+++ b/index.html
@@ -1,10 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a homepage">
+    <meta name="Keywords" content="emergencyroom,institution,nursingroom">
+    <meta name="author" content="Soha Gull">
+    <link rel="stylesheet" href="indexstyle.css">
+    <style>
+        *
+        /* For desktop: */
+        .col-1 {width: 8.33%;}
+        .col-2 {width: 16.66%;}
+        .col-3 {width: 25%;}
+        .col-4 {width: 33.33%;}
+        .col-5 {width: 41.66%;}
+        .col-6 {width: 50%;}
+        .col-7 {width: 58.33%}
+        .col-8 {width: 66.66%;}
+        .col-9 {width: 75%;}
+        .col-10 {width: 83.33%;}
+        .col-11 {width: 91.66%;}
+        .col-12 {width: 100%;}
+
+        @media only screen and (max-width: 768px) {
+            /* For mobile phones: */
+            [class*="col-"] {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-<h1>Online Hospital System </h1>
+
+<div class="header">
+    <a href="index.html">Home</a>
+    <a href="about.html">AboutUs</a>
+    <a href="#">Contact</a>
+    <a href="#">Login</a>
+    <a href="register.html">Register</a>
+    <a href="forgetpassword.html">ForgetPassword</a>
+</div>
+
+<div class="row">
+    <div class="col-12 menu">
+
+        <img src="h2.jpg" width="100%" height="345">
+    </div>
+    <div class="row1">
+        <div class="col-6 menu1">
+
+            <img src="aneasthesia.jpg" width="100%" height="345"><br>
+            <img src="Cardiology.jpg" width="100%" height="345"><br>
+            <img src="ENT.jpg" width="100%" height="345"><br>
+            <img src="neurosurgery.jpg" width="100%" height="345"><br>
+        </div>
+        <div class="col-6 aside">
+
+            <h1>Aneasthesia</h1><br>
+            <ul>
+                <li>Paediatric Anaesthesia</li>
+                <li>Obstetric Anaesthesia</li>
+                <li>General Anaesthesia</li>
+                <li>Epidural Anaesthesia for Labour</li>
+                <li>Pain Clinic</li>
+            </ul>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>Cardiology</h1><br>
+            <ul>
+                <li>Angiography</li>
+                <li>Angioplasty</li>
+                <li>Angina</li>
+                <li>Pacemaker Implantation</li>
+                <li>Coronary Care Unit</li>
+            </ul>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>ENT</h1><br>
+            <ul>
+                <li>Tonsil Surgery</li>
+                <li>Surgery for Laryngeal (Voice Box) Mouth & Throat Diseases</li>
+                <li>(DNS & Turbinate)</li>
+                <li>Surgery for Nasal Blockag</li>
+
+            </ul>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>Neurosurgery</h1><br>
+            <ul>
+                <li>Head Injury & Spinal Injuries</li>
+                <li>Brain Tumors</li>
+                <li>Spinal Surgery</li>
+                <li>Paediatric Neurosurgery</li>
+                <li>Endoscopic Neurosurgery</li>
+
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer">
+        <h><b>City Health Care Services (Pvt) Ltd.</b> <br>
+            Peer Khursheed Colony Road,<br>
+            Lahore.<br>
+            Phone: 042-6510 367<br>
+            www.cityhospital.com</h>
+    </div>
+</div>
+
 </body>
 </html>
