--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -53,9 +53,10 @@
                                             <div class="input-group">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
 
-                                                <input id="emailInput" placeholder="email address" class="form-control" type="email" oninvalid="setCustomValidity('Please enter a valid email address!')" onchange="try{setCustomValidity('')}catch(e){}" required="">
+                                                <input id="emailInput" placeholder="email address or phone number" class="form-control" type="email" oninvalid="setCustomValidity('Please enter a valid email address!')" onchange="try{setCustomValidity('')}catch(e){}" required pattern="[a-zA-Z0-9.!#$%&’*=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*" >
+
                                             </div>
-                                        </div>
+                                           </div>
                                         <div class="form-group">
                                             <input class="btn btn-lg btn-primary btn-block animated delay-5s flash " value="Send My Password" type="submit">
                                         </div>
