--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
             <!-- Username -->
             <label class="control-label"  for="username">Username</label>
             <div class="controls">
-                <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
+                <input type="text" id="username" name="username" placeholder="" class="input-xlarge" required pattern="[a-zA-Z0-9.?_]+\.?[a-zA-Z0-9]+(?:\.[a-zA-Z0-9-]+)*">
                 <p class="help-block">Username can contain any letters or numbers, without spaces</p>
             </div>
         </div>
@@ -35,8 +35,8 @@
             <!-- E-mail -->
             <label class="control-label" for="email">E-mail</label>
             <div class="controls">
-                <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-                <p class="help-block">Please provide your E-mail</p>
+                <input type="text" id="email" name="email" placeholder="e.g:03314567890 or he12@gmail.com" class="input-xlarge" required pattern="[a-zA-Z0-9.!#$%&’*=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*">
+                <p class="help-block">Please provide your E-mail or phone no.</p>
             </div>
         </div>
 
@@ -44,8 +44,8 @@
             <!-- Password-->
             <label class="control-label" for="password">Password</label>
             <div class="controls">
-                <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-                <p class="help-block">Password should be at least 4 characters</p>
+                <input type="password" id="password" name="password" placeholder="e.g:Whatever12" class="input-xlarge" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                <p class="help-block">Password should be at least 8 characters</p>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
             <!-- Password -->
             <label class="control-label"  for="password_confirm">Password (Confirm)</label>
             <div class="controls">
-                <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge">
+                <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="retype password" required>
                 <p class="help-block">Please confirm password</p>
             </div>
         </div>
